# PlugFlowDemo

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/xk/plugflowdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: VideoChannel.cpp  macro.h  native-lib.cpp  safe_queue.h
app/src/main/java/com/xk/plugflowdemo/: MainActivity.java
app/src/main/java/com/xk/plugflowdemo/live/: AudioChannel.java  CameraHelper.java  LivePusher.java  VideoChannel.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/xk/plugflowdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
